gap in detail section fixed

--- a/css/project-detail.css
+++ b/css/project-detail.css
@@ -28,17 +28,17 @@ img {
 
 .up-1 {
     position: relative;
-    top: -16rem;
+    top: -21rem;
 }
 
 .last {
     position: relative;
-    top: -11rem;
+    top: -12rem;
 }
 
 
 .up-2 {
-    top: -27rem;
+    top: -35rem;
     height: 90px;
 }
 
